[package]
name = "world-backup"
version = "0.1.0"
edition = "2024"
description = "Periodic Minecraft world backups with compression and scheduling"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
cron = "0.13"
ctrlc = "3.4"
env_logger = "0.11"
flate2 = "1.1"
globset = "0.4"
humantime = "2.3"
log = "0.4"
tar = "0.4"
tempfile = "3.23"
walkdir = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
zstd = "0.13"
